# terraform-aws-openvpn

./: .bumplus.toml  .editorconfig  .env.example  .envrc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .terraform.lock.hcl  .tmuxinator.yml  .todocheck.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  README.yaml  SECURITY.md  Taskfile.yml  commands.tf  data.tf  go.mod  go.sum  main.tf  mkdocs.yml  outputs.tf  package.json  provider.tf  pyproject.toml  setup.cfg  sonar-project.properties  variables.tf  versions.tf
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .golangci.yml  .prettierignore  markdown-link-config.json
.github/linters/: .gitleaks.toml  .prettierignore  markdown-link-config.json
.github/workflows/: test.yml
config/: app.go  app_test.go  config.go  config_test.go  interface.go  log.go
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  env-vars.md  faq.md  index.md  releasing.md  roadmap.md  support.md  testing.md  troubleshooting.md  usage.md
docs/contribute/: git-flow.md  github-flow.md
docs/examples/: common.md
docs/include/: terraform.md
example/: main.tf  provider.tf
examples/basic/: main.tf  variables.tf  versions.tf
internal/errors/: errors.go  errors_test.go  string.go
internal/testutil/: structs.go
internal/version/: version.go  version_test.go
scripts/: openvpn_download_keys.sh.tpl  openvpn_install.sh.tpl  openvpn_update_user.sh.tpl  vpnuserdata.sh
templates/: README.md
test/: aws_openvpn_basic_test.go  aws_openvpn_rules_ingress_test.go
(+49 files in other folders)
