[tool.poetry]
name = "terraform-aws-openvpn"
version = "0.4.0"
description = "terraform-aws-openvpn"
authors = ["Luis Mayta <luis@hadenlabs.com>"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/hadenlabs/terraform-aws-openvpn"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
boto3 = "^1.26.130"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
bridgecrew = "*"
doc8 = "*"
grip = "*"
isort = "*"
mkdocs = "*"
mkdocs-material = "*"
mypy = "*"
parso = "*"
pre-commit = "*"
pycodestyle = "*"
pydocstyle = "*"
pygments = "*"
pylint = "*"
pymdown-extensions = "*"
pytest = ">=6.2.4"
black = "*"
bumpversion = "*"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material"]

[tool.poetry_bumpversion.file."sonar-project.properties"]
search = 'sonar.projectVersion={current_version}'
replace = 'sonar.projectVersion={new_version}'

[tool.poetry_bumpversion.file."package.json"]
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.poetry_bumpversion.file."internal/version/version.go"]
search = 'dev = "{current_version}"'
replace = 'dev = "{new_version}"'

[tool.poetry_bumpversion.file."docs/examples/common.md"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
